<resources>
    <string name="app_name">Citas Medicas</string>

    <!--Main activity-->
    <string name="exitBtn">Salirr!</string>
    <string name="titleText">Iniciar sesión</string>
    <string name="hintNameLogin">Ingrese nombre</string>
    <string name="hintMedicalSpeciality">Especialidad</string>
    <string name="btnLoginText">Iniciar</string>

    <!--Add appointment  fragment-->
    <string name="addAppointmentTitle">Agendar cita</string>
    <string name="selectPasient">Seleccione paciente</string>
    <string name="selectDoctor">Seleccione doctor </string>
    <string name="stateAppointment">Estado </string>
    <string name="addAppointmentBtn">Agregar </string>
    <!-- Edit fragment -->
    <string name="titleEditFragmenta">Editar </string>
    <string name="returnToMedicalBtn">Mis citas</string>
    <string name="editAppointment">Editar</string>
    <string name="deleteAppointment">Eliminar</string>


</resources>