<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ScheduleAppointmentFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="64dp"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addAppointmentTitle"
            style="@style/titleText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Button
            android:id="@+id/appointmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Mis citas"
            style="@style/normalBtn"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@id/addPpointment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectPasient"
                style="@style/normaText"
                />
            <Spinner
                android:id="@+id/pacientIdSpiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                />
            <TextView
                android:id="@+id/pacientIdPacient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectDoctor"
                style="@style/normaText"
                />
            <Spinner
                android:id="@+id/doctorIdSpiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                />



            <EditText
                android:id="@+id/stateAppointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stateAppointment"
                style="@style/normalEditText"
                android:layout_marginBottom="32dp"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hora"
                    android:layout_marginRight="32dp"
                    style="@style/normaText"
                    />
                <Spinner
                    android:id="@+id/timeAppointmentSpiner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <DatePicker
                android:id="@+id/dateAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Button
            android:id="@+id/addPpointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/addAppointmentBtn"
            style="@style/addBtn"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>